<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andreikslpv.sign_in.presentation.SignInFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/authCopyrightText"
        style="@style/TextCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_basic"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/actionBarItemBackground"
        android:text="@string/auth_copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/anonymousButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_big_32"
        android:background="@drawable/background_button_border"
        android:foreground="?android:attr/actionBarItemBackground"
        android:gravity="center"
        android:text="@string/anonymous_button"
        android:textAllCaps="false"
        android:textColor="@color/text_card_title"
        android:textSize="@dimen/text_title_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/authCopyrightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleSignInButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/background_button_fill"
        android:foreground="?android:attr/actionBarItemBackground"
        android:gravity="center"
        android:text="@string/sign_in_with_google_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_button"
        app:backgroundTint="@color/purple"
        app:icon="@drawable/google_logo"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/anonymousButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>