<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/profileAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/profileToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:menu="@menu/menu_toolbar_profile"
            app:layout_scrollFlags="scroll|enterAlways">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/profileNested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileAvatar"
                android:layout_width="@dimen/profile_avatar_dimen"
                android:layout_height="@dimen/profile_avatar_dimen"
                android:layout_marginTop="@dimen/margin_big_24"
                android:scaleType="centerCrop"
                android:src="@drawable/anonim"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                tools:ignore="ContentDescription"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileCamera"
                android:layout_width="@dimen/profile_camera_dimen"
                android:layout_height="@dimen/profile_camera_dimen"
                android:layout_marginTop="@dimen/margin_big_24"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="@+id/profileAvatar"
                app:layout_constraintEnd_toEndOf="@+id/profileAvatar"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/profileNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_basic"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileAvatar">

                <EditText
                    android:id="@+id/profileName"
                    style="@style/TextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:text="@string/profile_name_anonymous"
                    tools:ignore="Autofill,LabelFor" />

                <ImageView
                    android:id="@+id/profilePencil"
                    android:layout_width="@dimen/profile_pencil_dimen"
                    android:layout_height="@dimen/profile_pencil_dimen"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_pencil"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profileEmail"
                style="@style/TextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileNameContainer"
                tools:text="Email" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/historyContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big_24"
                android:background="@drawable/background_main_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileEmail">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profileTitleHistory"
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_basic"
                    android:layout_marginTop="@dimen/margin_basic"
                    android:text="@string/profile_title_history"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/profileRecyclerHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileTitleHistory"
                    tools:listitem="@layout/item_card_preview" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/historyEmptyView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileTitleHistory"
                    tools:visibility="visible">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/historyUps"
                        style="@style/TextRecipeBasic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_basic"
                        android:layout_marginTop="@dimen/margin_basic"
                        android:text="@string/profile_ups"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/historyEmptyImage"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/item_card_preview_height"
                        android:layout_marginTop="@dimen/margin_basic"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/cover_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/historyUps"
                        tools:ignore="ContentDescription" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_basic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/historyEmptyImage" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signOutButton"
                style="@style/TextButtonBig.Start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_big_24"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:text="@string/profile_sign_out"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/historyContainer" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/deleteUserButton"
                style="@style/TextButtonDanger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_basic"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/actionBarItemBackground"
                android:gravity="start"
                android:text="@string/profile_delete_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signOutButton" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_basic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deleteUserButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.andreikslpv.presentation.views.ProfileDialog
        android:id="@+id/profileDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:translationZ="@dimen/progress_bar_elevation"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
